# NLPipe

./: .gitignore  README.md  config.json  nlpipe.py  nlpipePandas.py  pyproject.toml  requirements.txt
src/: acronyms.py  embeddings_manager.py  pipe.py  pipePandas.py  utils.py
src/nlpipe/: acronyms.py  cli.py  pipe.py
src/nlpipe/stw_lists/de/: readme.md
